# lvgl_port_v1

./: .cproject  .project  sdkconfig  sdkconfig.old
components/lvgl__lvgl/: lv_conf.h  lvgl.h
main/: CMakeLists.txt  lvgl_port.c  main.c
main/user/fonts/: my_symbols.c  my_time_font.c
main/user/menu/: lvgl_menu.c  lvgl_menu.h  lvgl_user_config.h
main/user/periphery/: open_meteo.c  open_meteo.h  periphery.c  periphery.h  sd_card.c  sd_card.h  standby.c  time.c  time.h  wifi.c  wifi.h
main/user/pics/: cloud_big_110_50.c  cloud_mid_90_45.c  cloud_small_70_35.c  cloud_thin_80_30.c  moon_42_42.c  rain_drop_heavy_9_22.c  snow_flake_2_15_15.c  sun_48_48.c  wind_60_50.c
